--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,74 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}base{% endblock %}</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='../static/css/about.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='../static/css/style.css') }}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
+<body>
+    <header>
+        <div class="header">
+            <div class="container-fluid">
+                <nav class="navbar navbar-expand-lg custom_nav-container">
+                    <a class="navbar-brand" href="{{ url_for('home') }}">SOENG</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class=""> </span>
+                      </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav  ">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{{ url_for('home') }}">
+                                    Home
+                                <span class="sr-only">(current)</span>
+                                </a>
+                            </li>
 
-{% block content %}
-<div class="about">
-    <h2>About Us</h2>
-    <p>We are Herald and Jester, partners in creating this efficient vehicle traffic simulation project for the Software Engineering course.</p>
-</div>
-{% endblock %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('about') }}">About</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://github.com/Devcavi19/SE-CS3110-Project" target="_blank">Github</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('signin') }}">SignIn</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('feedback') }}">Feedback</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <div class="about-container" style="padding-top: 100px;">
+            <div class="about-container">
+        <div class="aboutTxt" style="height: 40px;">
+            <h2>ABOUT US</h2>
+        </div>
+    
+        <div class="ourImage">
+            <img src="{{ url_for('static', filename='../static/img/herald.jpg') }}" alt="Herald">
+            <img src="{{ url_for('static', filename='../static/img/penguin.png') }}" alt="Penguin">
+        </div>
+    
+        <div class="aboutSentence" style="height: 100px;">
+            <p>We are Herald and Jester, a partner in this
+                project about efficient vehicle traffic simulation
+                made for the Software Engineering course.</p>
+        </div>
+    </div>
+    </div>
+
+    <footer>
+        <p>© 2024 Vehicle Traffic Simulator</p>
+    </footer>
+</body>
+</html>
