--- a/templates/base.html
+++ b/templates/base.html
@@ -3,24 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Website Title{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <title>{% block title %}base{% endblock %}</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='../static/css/style.css') }}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <header>
-        <h1>SOEN</h1>
-        <nav>
-            <ul>
-                <li><a href="{{ url_for('welcome') }}">Home</a></li>
-                <li><a href="{{ url_for('about') }}">About</a></li>
-                <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
-                <li><a href="{{ url_for('signin') }}">Sign In</a></li>
-            </ul>
-        </nav>
+        <div class="header">
+            <div class="container-fluid">
+                <nav class="navbar navbar-expand-lg custom_nav-container">
+                    <a class="navbar-brand" href="{{ url_for('home') }}">SOENG</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class=""> </span>
+                      </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav  ">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{{ url_for('home') }}">
+                                    Home
+                                <span class="sr-only">(current)</span>
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('about') }}">About</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://github.com/Devcavi19/SE-CS3110-Project" target="_blank">Github</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('signin') }}">SignIn</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('feedback') }}">Feedback</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
     </header>
-    <main>
-        {% block content %}{% endblock %}
-    </main>
+
+    <div class="parent-container">
+        <div class="welcome" style="height: 300px;">
+            <h2>WELCOME TO</h2>
+            <h2>VEHICLE TRAFFIC SIMULATOR</h2>
+            <p>A project by Herald and Jester</p>
+            <a href="#" class="btn">Start Simulation</a>
+        </div>
+    </div>
+
     <footer>
         <p>© 2024 Vehicle Traffic Simulator</p>
     </footer>
