--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header">
             <div class="container-fluid">
-                <nav class="navbar navbar-expand-lg custom_nav-container">
+                <nav class="navbar navbar-expand-lg custom_nav-container" style="height: 36px;">
                     <a class="navbar-brand" href="{{ url_for('home') }}">SOENG</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class=""> </span>
