--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,16 +1,79 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>User sign in</title>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<link rel="stylesheet" href="static/css/sign-in.css">
+<link rel="stylesheet" href="static/css/style.css">
+</head>
+<body>
+  
+    <header>
+        <div class="header">
+            <div class="container-fluid">
+                <nav class="navbar navbar-expand-lg custom_nav-container" style="height: 36px;">
+                    <a class="navbar-brand" href="{{ url_for('home') }}">SOENG</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class=""> </span>
+                      </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav  ">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{{ url_for('home') }}">
+                                    Home
+                                <span class="sr-only"></span>
+                                </a>
+                            </li>
 
-{% block content %}
-<div class="form-container">
-    <h2>Sign In</h2>
-    <form method="POST" action="{{ url_for('signin') }}">
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required>
-        
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required>
-        
-        <button type="submit" class="btn">Sign In</button>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('about') }}">About</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://github.com/Devcavi19/SE-CS3110-Project" target="_blank">Github</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('signin') }}">SignIn</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('feedback') }}">Feedback</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+  <div class="login-container" style="top: 120px;">
+    <form action="/signIn" method="POST">
+      <div class="login-field">
+        <label for="email">Email:</label>
+        <input type="text" id="email" name="email">
+      </div>
+      <div class="login-field">
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password">
+      </div>
+      <button class="signin-button" type="submit">Sign in</button required>
+      <button class="signup-button" type="button" onclick="signup()">Sign up</button required>
     </form>
-</div>
-{% endblock %}
+    {% if message %}
+    <p style="color: red;">{{ message }}</p>
+    {% endif %}
+  </div>
+
+  <script>
+    function signup() {
+        // Implement read bookings logic
+        window.location.href = "/signup";
+    }
+  </script>
+
+</body>
+</html>
