--- a/templates/about.html
+++ b/templates/about.html
@@ -56,7 +56,7 @@
     
         <div class="ourImage">
             <img src="{{ url_for('static', filename='../static/img/herald.jpg') }}" alt="Herald">
-            <img src="{{ url_for('static', filename='../static/img/penguin.png') }}" alt="Penguin">
+            <img src="{{ url_for('static', filename='../static/img/jester.jpg') }}" alt="Jester">
         </div>
     
         <div class="aboutSentence" style="height: 100px;">
