--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,10 +23,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav  ">
                             <li class="nav-item active">
-                                <a class="nav-link" href="{{ url_for('home') }}">
-                                    Home
-                                <span class="sr-only"></span>
-                                </a>
+                                <a class="nav-link" href="{{ url_for('home') }}">Home</a>
                             </li>
 
                             <li class="nav-item">
@@ -52,7 +49,7 @@
     </header>
 
     <div class="registration-form">
-        <form action="/signUp" method="POST">
+        <form action="{{ url_for('signup') }}" method="POST">
 
             <div class="form-icon">
                 <span><i class="icon icon-user"></i></span>
@@ -67,56 +64,58 @@
             </div>
 
             <div class="form-group">
-              <input type="email" class="form-control item" id="email" name="email" placeholder="Email Address" required style="margin-bottom: 5px;">
-              <p style="font-size: 12px; margin-top: 5px; padding-left: 20px;">{{ message }}</p>
+                <input type="email" class="form-control item" id="email" name="email" placeholder="Email Address" required style="margin-bottom: 5px;">
+                <p style="font-size: 12px; margin-top: 5px; padding-left: 20px;">{{ message }}</p>
             </div>
 
             <div class="form-group">
-              <input type="password" class="form-control item" id="password" name="password" placeholder="Password" required style="margin-bottom: 5px;">
-              <p style="font-size: 12px; margin-top: 5px; padding-left: 20px;"></p>
+                <input type="password" class="form-control item" id="password" name="password" placeholder="Password" required style="margin-bottom: 5px;">
+                <p style="font-size: 12px; margin-top: 5px; padding-left: 20px;"></p>
             </div>
 
             <div class="form-group">
-              <input type="password" class="form-control item" id="confirm-password" name="confirm_password" placeholder="Confirm Password" required style="margin-bottom: 5px;">
-              <p id="password-match-message" style="font-size: 12px; margin-top: 5px; padding-left: 20px;"></p>
+                <input type="password" class="form-control item" id="confirm-password" name="confirm_password" placeholder="Confirm Password" required style="margin-bottom: 5px;">
+                <p id="password-match-message" style="font-size: 12px; margin-top: 5px; padding-left: 20px;"></p>
             </div>
 
-            <script>document.getElementById('confirm-password').addEventListener('input', function() {
-                var password = document.getElementById('password').value;
-                var confirmPassword = this.value;
-                var message = document.getElementById('password-match-message');
+            <script>
+                document.getElementById('confirm-password').addEventListener('input', function() {
+                    var password = document.getElementById('password').value;
+                    var confirmPassword = this.value;
+                    var message = document.getElementById('password-match-message');
 
-                if (password.length < 8) {
-                    message.textContent = 'Password must be at least 8 characters';
-                    message.style.color = 'red';
-                } else if (password === confirmPassword) {
-                    message.textContent = 'Passwords match';
-                    message.style.color = 'green';
-                } else {
-                    message.textContent = 'Passwords do not match';
-                    message.style.color = 'red';
-                }
-            });
+                    if (password.length < 8) {
+                        message.textContent = 'Password must be at least 8 characters';
+                        message.style.color = 'red';
+                    } else if (password === confirmPassword) {
+                        message.textContent = 'Passwords match';
+                        message.style.color = 'green';
+                    } else {
+                        message.textContent = 'Passwords do not match';
+                        message.style.color = 'red';
+                    }
+                });
 
-            document.querySelector('form').addEventListener('submit', function(event) {
-                var password = document.getElementById('password').value;
-                var confirmPassword = document.getElementById('confirm-password').value;
-                var message = document.getElementById('password-match-message');
+                document.querySelector('form').addEventListener('submit', function(event) {
+                    var password = document.getElementById('password').value;
+                    var confirmPassword = document.getElementById('confirm-password').value;
+                    var message = document.getElementById('password-match-message');
 
-                if (password !== confirmPassword) {
-                    event.preventDefault();
-                    message.textContent = 'Passwords do not match';
-                    message.style.color = 'red';
-                }
-            });</script>
+                    if (password !== confirmPassword) {
+                        event.preventDefault();
+                        message.textContent = 'Passwords do not match';
+                        message.style.color = 'red';
+                    }
+                });
+            </script>
 
-            
             <div class="form-group">
                 <button type="submit" class="btn btn-block submit">Submit</button>
             </div>
 
         </form>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
 </body>
