--- a/templates/signin.html
+++ b/templates/signin.html
@@ -6,7 +6,7 @@
 <title>User sign in</title>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<link rel="stylesheet" href="static/css/sign-in.css">
+<link rel="stylesheet" href="static/css/signin.css">
 <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
@@ -51,7 +51,7 @@
     </header>
 
   <div class="login-container" style="top: 120px;">
-    <form action="/signIn" method="POST">
+    <form action="/signin" method="POST">
       <div class="login-field">
         <label for="email">Email:</label>
         <input type="text" id="email" name="email">
