--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
             <h2>WELCOME TO</h2>
             <h2>VEHICLE TRAFFIC SIMULATOR</h2>
             <p>A project by Herald and Jester</p>
-            <a href="#" class="btn">Start Simulation</a>
+            <a href="{{ url_for('simulation') }}" class="btn">Start Simulation</a>
         </div>
     </div>
 
